samples/_failures_safe/1761396170_f00e46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2aa8325.c: In function ‘main’:
./samples/SAFE/__tmp_b2aa8325.c:164:12: error: missing terminating " character
  164 |     printf("Enter edges as 'u v weight' (0-indexed):\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2aa8325.c:164:5: error: expected expression at end of input
  164 |     printf("Enter edges as 'u v weight' (0-indexed):\n
      |     ^~~~~~
./samples/SAFE/__tmp_b2aa8325.c:164:5: error: expected declaration or statement at end of input
